Toolbars, navigation panel adjusted for mobile-friendliness
Progress on #7

also fixes #6

--- a/demos/action-for-heroes/nav.html
+++ b/demos/action-for-heroes/nav.html
@@ -29,159 +29,159 @@
       <!-- <li><a href="content.xhtml#dtb1" id="d4e21">Action for Heroes</a></li> -->
       <!-- <li><a href="content.xhtml#dtb3" id="d4e47">Action for Heroes</a> -->
       <ol>
-        <li><a href="002.html#dtb5" id="d4e92">Introduction</a></li>
-        <li><a href="003.html#dtb24" id="d4e252">CHAT messages</a>
+        <li><a href="index.html#dtb5" id="d4e92">Introduction</a></li>
+        <li><a href="index.html#dtb24" id="d4e252">CHAT messages</a>
           <ol>
-            <li><a href="003.html#dtb25" id="d4e263">The CHAT messages are:</a></li>
+            <li><a href="index.html#dtb25" id="d4e263">The CHAT messages are:</a></li>
           </ol>
         </li>
-        <li><a href="004.html#dtb63" id="d4e585">Preparing to read and CHAT</a>
+        <li><a href="index.html#dtb63" id="d4e585">Preparing to read and CHAT</a>
           <ol>
-            <li><a href="004.html#dtb64" id="d4e596">When preparing to read with children, please
+            <li><a href="index.html#dtb64" id="d4e596">When preparing to read with children, please
                 remember:</a></li>
-            <li><a href="004.html#dtb73" id="d4e693">It is time to CHAT, when you see</a></li>
-            <li><a href="004.html#dtb90" id="d4e855">Sharing information:</a></li>
-            <li><a href="004.html#dtb97" id="d4e912">Hearing children:</a></li>
-            <li><a href="004.html#dtb112" id="d4e1108">Example of a CHAT that HEARs the child:</a>
+            <li><a href="index.html#dtb73" id="d4e693">It is time to CHAT, when you see</a></li>
+            <li><a href="index.html#dtb90" id="d4e855">Sharing information:</a></li>
+            <li><a href="index.html#dtb97" id="d4e912">Hearing children:</a></li>
+            <li><a href="index.html#dtb112" id="d4e1108">Example of a CHAT that HEARs the child:</a>
             </li>
-            <li><a href="004.html#dtb143" id="d4e1359">Example of a CHAT where a child is not
+            <li><a href="index.html#dtb143" id="d4e1359">Example of a CHAT where a child is not
                 heard:</a></li>
-            <li><a href="004.html#dtb161" id="d4e1508">Focus on the key messages</a></li>
-            <li><a href="004.html#dtb171" id="d4e1578">Length of CHAT</a></li>
-            <li><a href="004.html#dtb179" id="d4e1636">Unique CHATS</a></li>
-            <li><a href="004.html#dtb184" id="d4e1684">THE ARIO: Information for Adults</a></li>
+            <li><a href="index.html#dtb161" id="d4e1508">Focus on the key messages</a></li>
+            <li><a href="index.html#dtb171" id="d4e1578">Length of CHAT</a></li>
+            <li><a href="index.html#dtb179" id="d4e1636">Unique CHATS</a></li>
+            <li><a href="index.html#dtb184" id="d4e1684">THE ARIO: Information for Adults</a></li>
           </ol>
         </li>
-        <li><a href="005.html#dtb187" id="d4e1720">Understanding the Guide</a></li>
-        <li><a href="006.html#dtb213" id="d4e1991">THE ARIO</a>
+        <li><a href="index.html#dtb187" id="d4e1720">Understanding the Guide</a></li>
+        <li><a href="index.html#dtb213" id="d4e1991">THE ARIO</a>
           <ol>
-            <li><a href="006.html#dtb215" id="d4e2011">ADULTS BENEFIT FROM LISTENING TO
+            <li><a href="index.html#dtb215" id="d4e2011">ADULTS BENEFIT FROM LISTENING TO
                 CHILDREN</a></li>
           </ol>
         </li>
-        <li><a href="007.html#dtb237" id="d4e2216">THE ARIO</a>
+        <li><a href="index.html#dtb237" id="d4e2216">THE ARIO</a>
           <ol>
-            <li><a href="007.html#dtb239" id="d4e2236">CHILDREN NEED TO KNOW THE FACTS ABOUT
+            <li><a href="index.html#dtb239" id="d4e2236">CHILDREN NEED TO KNOW THE FACTS ABOUT
                 COVID-19</a></li>
           </ol>
         </li>
-        <li><a href="008.html#dtb265" id="d4e2469">KEY MESSAGE 1 Staying healthy</a></li>
-        <li><a href="009.html#dtb310" id="d4e2896">THE ARIO</a>
+        <li><a href="index.html#dtb265" id="d4e2469">KEY MESSAGE 1 Staying healthy</a></li>
+        <li><a href="index.html#dtb310" id="d4e2896">THE ARIO</a>
           <ol>
-            <li><a href="009.html#dtb312" id="d4e2916">CHILDREN SPEAK OUT</a></li>
+            <li><a href="index.html#dtb312" id="d4e2916">CHILDREN SPEAK OUT</a></li>
           </ol>
         </li>
-        <li><a href="010.html#dtb332" id="d4e3107">KEY MESSAGE 2 Children speak out</a>
+        <li><a href="index.html#dtb332" id="d4e3107">KEY MESSAGE 2 Children speak out</a>
           <ol>
-            <li><a href="010.html#dtb366" id="d4e3464">MANAGING OUR STRESS</a></li>
+            <li><a href="index.html#dtb366" id="d4e3464">MANAGING OUR STRESS</a></li>
           </ol>
         </li>
-        <li><a href="011.html#dtb391" id="d4e3694">KEY MESSAGE 3 Coping with stress</a></li>
-        <li><a href="012.html#dtb496" id="d4e4637">THE ARIO</a>
+        <li><a href="index.html#dtb391" id="d4e3694">KEY MESSAGE 3 Coping with stress</a></li>
+        <li><a href="index.html#dtb496" id="d4e4637">THE ARIO</a>
           <ol>
-            <li><a href="012.html#dtb498" id="d4e4657">FEELING SAFE COMES FROM THE HEART</a></li>
+            <li><a href="index.html#dtb498" id="d4e4657">FEELING SAFE COMES FROM THE HEART</a></li>
           </ol>
         </li>
-        <li><a href="013.html#dtb524" id="d4e4887">KEY MESSAGE 4 Keeping each other safe</a></li>
-        <li><a href="014.html#dtb582" id="d4e5410">THE ARIO</a>
+        <li><a href="index.html#dtb524" id="d4e4887">KEY MESSAGE 4 Keeping each other safe</a></li>
+        <li><a href="index.html#dtb582" id="d4e5410">THE ARIO</a>
           <ol>
-            <li><a href="014.html#dtb584" id="d4e5430">FAMILIES FIGHT COVID-19 TOGETHER</a></li>
+            <li><a href="index.html#dtb584" id="d4e5430">FAMILIES FIGHT COVID-19 TOGETHER</a></li>
           </ol>
         </li>
-        <li><a href="015.html#dtb611" id="d4e5665">KEY MESSAGE 5 Solving problems</a></li>
-        <li><a href="016.html#dtb664" id="d4e6141">THE ARIO</a>
+        <li><a href="index.html#dtb611" id="d4e5665">KEY MESSAGE 5 Solving problems</a></li>
+        <li><a href="index.html#dtb664" id="d4e6141">THE ARIO</a>
           <ol>
-            <li><a href="016.html#dtb666" id="d4e6161">COVID-19 HAS NO BOUNDARIES</a></li>
+            <li><a href="index.html#dtb666" id="d4e6161">COVID-19 HAS NO BOUNDARIES</a></li>
           </ol>
         </li>
-        <li><a href="017.html#dtb687" id="d4e6347">KEY MESSAGE 6 All people need to be protected</a>
+        <li><a href="index.html#dtb687" id="d4e6347">KEY MESSAGE 6 All people need to be protected</a>
         </li>
-        <li><a href="018.html#dtb702" id="d4e6505">THE ARIO</a>
+        <li><a href="index.html#dtb702" id="d4e6505">THE ARIO</a>
           <ol>
-            <li><a href="018.html#dtb704" id="d4e6525">HOW TO DEAL WITH A BROKEN HEART?</a></li>
+            <li><a href="index.html#dtb704" id="d4e6525">HOW TO DEAL WITH A BROKEN HEART?</a></li>
           </ol>
         </li>
-        <li><a href="019.html#dtb719" id="d4e6684">KEY MESSAGE 7 Living with heartache</a></li>
-        <li><a href="020.html#dtb778" id="d4e7157">THE ARIO</a>
+        <li><a href="index.html#dtb719" id="d4e6684">KEY MESSAGE 7 Living with heartache</a></li>
+        <li><a href="index.html#dtb778" id="d4e7157">THE ARIO</a>
           <ol>
-            <li><a href="020.html#dtb780" id="d4e7177">WHEN ARE WE SAFE FROM A PERSON WHO WAS
+            <li><a href="index.html#dtb780" id="d4e7177">WHEN ARE WE SAFE FROM A PERSON WHO WAS
                 INFECTED?</a></li>
           </ol>
         </li>
-        <li><a href="021.html#dtb796" id="d4e7331">KEY MESSAGE 8 Being a responsible citizen of the
+        <li><a href="index.html#dtb796" id="d4e7331">KEY MESSAGE 8 Being a responsible citizen of the
             world</a></li>
-        <li><a href="022.html#dtb878" id="d4e8054">THE ARIO</a>
+        <li><a href="index.html#dtb878" id="d4e8054">THE ARIO</a>
           <ol>
-            <li><a href="022.html#dtb880" id="d4e8074">YOU ARE THE HERO</a></li>
+            <li><a href="index.html#dtb880" id="d4e8074">YOU ARE THE HERO</a></li>
           </ol>
         </li>
-        <li><a href="023.html#dtb885" id="d4e8163">KEY MESSAGE 9 My hero is YOU</a></li>
-        <li><a href="024.html#dtb911" id="d4e8427">Links to My Hero is You further resources:</a></li>
+        <li><a href="index.html#dtb885" id="d4e8163">KEY MESSAGE 9 My hero is YOU</a></li>
+        <li><a href="index.html#dtb911" id="d4e8427">Links to My Hero is You further resources:</a></li>
       </ol>
       <!-- </li>
         </ol> -->
     </nav>
     <nav id="page-list" class="epubtype_page-list">
       <ol>
-        <li><a href="001.html#page1" id="d3e21">1</a></li>
-        <li><a href="002.html#page2" id="d5e28">2</a></li>
-        <li><a href="002.html#page3" id="d6e74">3</a></li>
-        <li><a href="004.html#page4" id="d10e22">4</a></li>
-        <li><a href="004.html#page5" id="d11e65">5</a></li>
-        <li><a href="004.html#page6" id="d13e43">6</a></li>
-        <li><a href="004.html#page7" id="d14e43">7</a></li>
-        <li><a href="004.html#page8" id="d15e53">8</a></li>
-        <li><a href="004.html#page9" id="d18e31">9</a></li>
-        <li><a href="005.html#page10" id="d20e43">10</a></li>
-        <li><a href="005.html#page11" id="d20e102">11</a></li>
-        <li><a href="006.html#page12" id="d20e108">12</a></li>
-        <li><a href="006.html#page13" id="d22e50">13</a></li>
-        <li><a href="006.html#page14" id="d22e62">14</a></li>
-        <li><a href="007.html#page15" id="d22e96">15</a></li>
-        <li><a href="007.html#page16" id="d24e50">16</a></li>
-        <li><a href="008.html#page17" id="d24e105">17</a></li>
-        <li><a href="008.html#page18" id="d25e71">18</a></li>
-        <li><a href="009.html#page19" id="d25e167">19</a></li>
-        <li><a href="009.html#page20" id="d27e65">20</a></li>
-        <li><a href="010.html#page21" id="d27e87">21</a></li>
-        <li><a href="010.html#page22" id="d28e80">22</a></li>
-        <li><a href="010.html#page23" id="d28e127">23</a></li>
-        <li><a href="010.html#page24" id="d29e56">24</a></li>
-        <li><a href="011.html#page25" id="d29e102">25</a></li>
-        <li><a href="011.html#page26" id="d30e59">26</a></li>
-        <li><a href="011.html#page27" id="d30e170">27</a></li>
-        <li><a href="011.html#page28" id="d30e250">28</a></li>
-        <li><a href="011.html#page29" id="d30e346">29</a></li>
-        <li><a href="012.html#page30" id="d32e74">30</a></li>
-        <li><a href="013.html#page31" id="d32e102">31</a></li>
-        <li><a href="013.html#page32" id="d33e87">32</a></li>
-        <li><a href="013.html#page33" id="d33e179">33</a></li>
-        <li><a href="014.html#page34" id="d33e201">34</a></li>
-        <li><a href="014.html#page35" id="d35e65">35</a></li>
-        <li><a href="015.html#page36" id="d35e108">36</a></li>
-        <li><a href="015.html#page37" id="d36e59">37</a></li>
-        <li><a href="015.html#page38" id="d36e142">38</a></li>
-        <li><a href="015.html#page39" id="d36e186">39</a></li>
-        <li><a href="016.html#page40" id="d36e195">40</a></li>
-        <li><a href="016.html#page41" id="d38e56">41</a></li>
-        <li><a href="017.html#page42" id="d38e90">42</a></li>
-        <li><a href="017.html#page43" id="d39e65">43</a></li>
-        <li><a href="018.html#page44" id="d39e74">44</a></li>
-        <li><a href="018.html#page45" id="d41e40">45</a></li>
-        <li><a href="018.html#page46" id="d41e71">46</a></li>
-        <li><a href="019.html#page47" id="d41e77">47</a></li>
-        <li><a href="019.html#page48" id="d42e127">48</a></li>
-        <li><a href="019.html#page49" id="d42e204">49</a></li>
-        <li><a href="020.html#page50" id="d42e213">50</a></li>
-        <li><a href="020.html#page51" id="d44e46">51</a></li>
-        <li><a href="021.html#page52" id="d44e74">52</a></li>
-        <li><a href="021.html#page53" id="d45e84">53</a></li>
-        <li><a href="021.html#page54" id="d45e189">54</a></li>
-        <li><a href="022.html#page55" id="d47e37">55</a></li>
-        <li><a href="023.html#page56" id="d47e43">56</a></li>
-        <li><a href="023.html#page57" id="d48e68">57</a></li>
-        <li><a href="023.html#page58" id="d48e102">58</a></li>
-        <li><a href="024.html#page59" id="d48e108">59</a></li>
+        <li><a href="index.html#page1" id="d3e21">1</a></li>
+        <li><a href="index.html#page2" id="d5e28">2</a></li>
+        <li><a href="index.html#page3" id="d6e74">3</a></li>
+        <li><a href="index.html#page4" id="d10e22">4</a></li>
+        <li><a href="index.html#page5" id="d11e65">5</a></li>
+        <li><a href="index.html#page6" id="d13e43">6</a></li>
+        <li><a href="index.html#page7" id="d14e43">7</a></li>
+        <li><a href="index.html#page8" id="d15e53">8</a></li>
+        <li><a href="index.html#page9" id="d18e31">9</a></li>
+        <li><a href="index.html#page10" id="d20e43">10</a></li>
+        <li><a href="index.html#page11" id="d20e102">11</a></li>
+        <li><a href="index.html#page12" id="d20e108">12</a></li>
+        <li><a href="index.html#page13" id="d22e50">13</a></li>
+        <li><a href="index.html#page14" id="d22e62">14</a></li>
+        <li><a href="index.html#page15" id="d22e96">15</a></li>
+        <li><a href="index.html#page16" id="d24e50">16</a></li>
+        <li><a href="index.html#page17" id="d24e105">17</a></li>
+        <li><a href="index.html#page18" id="d25e71">18</a></li>
+        <li><a href="index.html#page19" id="d25e167">19</a></li>
+        <li><a href="index.html#page20" id="d27e65">20</a></li>
+        <li><a href="index.html#page21" id="d27e87">21</a></li>
+        <li><a href="index.html#page22" id="d28e80">22</a></li>
+        <li><a href="index.html#page23" id="d28e127">23</a></li>
+        <li><a href="index.html#page24" id="d29e56">24</a></li>
+        <li><a href="index.html#page25" id="d29e102">25</a></li>
+        <li><a href="index.html#page26" id="d30e59">26</a></li>
+        <li><a href="index.html#page27" id="d30e170">27</a></li>
+        <li><a href="index.html#page28" id="d30e250">28</a></li>
+        <li><a href="index.html#page29" id="d30e346">29</a></li>
+        <li><a href="index.html#page30" id="d32e74">30</a></li>
+        <li><a href="index.html#page31" id="d32e102">31</a></li>
+        <li><a href="index.html#page32" id="d33e87">32</a></li>
+        <li><a href="index.html#page33" id="d33e179">33</a></li>
+        <li><a href="index.html#page34" id="d33e201">34</a></li>
+        <li><a href="index.html#page35" id="d35e65">35</a></li>
+        <li><a href="index.html#page36" id="d35e108">36</a></li>
+        <li><a href="index.html#page37" id="d36e59">37</a></li>
+        <li><a href="index.html#page38" id="d36e142">38</a></li>
+        <li><a href="index.html#page39" id="d36e186">39</a></li>
+        <li><a href="index.html#page40" id="d36e195">40</a></li>
+        <li><a href="index.html#page41" id="d38e56">41</a></li>
+        <li><a href="index.html#page42" id="d38e90">42</a></li>
+        <li><a href="index.html#page43" id="d39e65">43</a></li>
+        <li><a href="index.html#page44" id="d39e74">44</a></li>
+        <li><a href="index.html#page45" id="d41e40">45</a></li>
+        <li><a href="index.html#page46" id="d41e71">46</a></li>
+        <li><a href="index.html#page47" id="d41e77">47</a></li>
+        <li><a href="index.html#page48" id="d42e127">48</a></li>
+        <li><a href="index.html#page49" id="d42e204">49</a></li>
+        <li><a href="index.html#page50" id="d42e213">50</a></li>
+        <li><a href="index.html#page51" id="d44e46">51</a></li>
+        <li><a href="index.html#page52" id="d44e74">52</a></li>
+        <li><a href="index.html#page53" id="d45e84">53</a></li>
+        <li><a href="index.html#page54" id="d45e189">54</a></li>
+        <li><a href="index.html#page55" id="d47e37">55</a></li>
+        <li><a href="index.html#page56" id="d47e43">56</a></li>
+        <li><a href="index.html#page57" id="d48e68">57</a></li>
+        <li><a href="index.html#page58" id="d48e102">58</a></li>
+        <li><a href="index.html#page59" id="d48e108">59</a></li>
       </ol>
     </nav>
 
