fix: clarify purpose of heading links

--- a/demos/src/help/index.html
+++ b/demos/src/help/index.html
@@ -57,6 +57,7 @@
             <li><a href="#overview">Overview</a></li>
             <li><a href="#navigation-sidebar">Navigation Sidebar</a></li>
             <li><a href="#settings">Settings</a></li>
+            <li><a href="#bookmarks">Bookmarks</li>
             <li><a href="#keyboard-shortcuts">Keyboard Shortcuts</a></li>
         </ul>
 
@@ -102,6 +103,18 @@
                 </ul>
             </figcaption>
         </figure>
+        
+        <h2 id="bookmarks">Bookmarks</h2>
+        <p>Next to each heading in the publication text is a link, represented visually with a link icon 
+            <span>(<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" 
+            role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+            <g transform="rotate(135 12 12)">
+                <g fill="none">
+                    <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"/>
+                </g>
+            </g>
+        </svg>)</span>, and labelled as <span style="font-style: italic">"Link to heading [name]"</span>. 
+        To create a bookmark, select this link and bookmark it using your browser.</p>
         
         <h2 id="keyboard-shortcuts">Keyboard shortcuts</h2>
 
